cmake_minimum_required(VERSION 3.2.12)  # Ships with Ubuntu 14.04 (Trusty)

set(GOOGLE_DEPS_INSTALL_DIR
  ${PROJECT_SOURCE_DIR}/../GoogleDeps)

set(ENV{LUA_DIR}
  ${GOOGLE_DEPS_INSTALL_DIR})

set(CERES_INSTALL_DIR
  ${GOOGLE_DEPS_INSTALL_DIR})

set(PROTOBUF_PROTOC_EXECUTABLE
  ${GOOGLE_DEPS_INSTALL_DIR}/bin/protoc)
set(PROTOBUF_INCLUDE_DIR
  ${GOOGLE_DEPS_INSTALL_DIR}/include)
set(PROTOBUF_LIBRARY
  ${GOOGLE_DEPS_INSTALL_DIR}/lib)

add_subdirectory(cartographer)
